--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-
+/* 
 body {
     margin: 0;
   }
@@ -179,4 +179,4 @@ body {
       }
   }
   
-  
+   */
